add_subdirectory(${PROJECT_SOURCE_DIR}/include/Spirit)
add_subdirectory(${PROJECT_SOURCE_DIR}/include/data)
add_subdirectory(${PROJECT_SOURCE_DIR}/include/engine)
add_subdirectory(${PROJECT_SOURCE_DIR}/include/io)
add_subdirectory(${PROJECT_SOURCE_DIR}/include/utility)

set(HEADER_SPIRIT
    ${HEADER_SPIRIT}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_DATA
    ${HEADER_SPIRIT_DATA}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE
    ${HEADER_SPIRIT_ENGINE}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_BACKEND
    ${HEADER_SPIRIT_ENGINE_BACKEND}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_COMMON
    ${HEADER_SPIRIT_ENGINE_COMMON}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_COMMON_INTERACTION
    ${HEADER_SPIRIT_ENGINE_COMMON_INTERACTION}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_SPIN
    ${HEADER_SPIRIT_ENGINE_SPIN}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_SPIN_INTERACTION
    ${HEADER_SPIRIT_ENGINE_SPIN_INTERACTION}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_IO
    ${HEADER_SPIRIT_IO}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_UTILITY
    ${HEADER_SPIRIT_UTILITY}
    PARENT_SCOPE
)
