add_subdirectory(backend)
set(HEADER_SPIRIT_ENGINE_BACKEND
    ${HEADER_SPIRIT_ENGINE_BACKEND}
    PARENT_SCOPE
)

add_subdirectory(common)
set(HEADER_SPIRIT_ENGINE_COMMON
    ${HEADER_SPIRIT_ENGINE_SPIN}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_COMMON_INTERACTION
    ${HEADER_SPIRIT_ENGINE_COMMON_INTERACTION}
    PARENT_SCOPE
)

add_subdirectory(spin)

set(HEADER_SPIRIT_ENGINE_SPIN
    ${HEADER_SPIRIT_ENGINE_SPIN}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_SPIN_INTERACTION
    ${HEADER_SPIRIT_ENGINE_SPIN_INTERACTION}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE
    ${HEADER_SPIRIT_ENGINE}
    ${CMAKE_CURRENT_SOURCE_DIR}/Backend.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Neighbours.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vectormath_Defines.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vectormath.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vectormath.inl
    ${CMAKE_CURRENT_SOURCE_DIR}/Manifoldmath.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Managed_Allocator.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/FFT.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_Kernels.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_Kernels.inl
    ${CMAKE_CURRENT_SOURCE_DIR}/StateType.hpp
    PARENT_SCOPE
)
