add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/interaction)

set(SOURCE_SPIRIT_ENGINE_COMMON_INTERACTION
    ${SOURCE_SPIRIT_ENGINE_COMMON_INTERACTION}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_COMMON
    ${HEADER_SPIRIT_ENGINE_COMMON}
    ${CMAKE_CURRENT_SOURCE_DIR}/Hamiltonian.hpp
    PARENT_SCOPE
)
