add_subdirectory(interaction)

set(SOURCE_SPIRIT_ENGINE_COMMON_INTERACTION
    ${SOURCE_SPIRIT_ENGINE_COMMON_INTERACTION}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_COMMON
    ${HEADER_SPIRIT_ENGINE_COMMON}
    ${CMAKE_CURRENT_SOURCE_DIR}/Functor_Dispatch.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Hamiltonian.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Interaction_Standalone_Adaptor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Interaction_Traits.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Interaction_Wrapper.hpp
    PARENT_SCOPE
)
