add_subdirectory(interaction)

set(HEADER_SPIRIT_ENGINE_COMMON_INTERACTION
    ${HEADER_SPIRIT_ENGINE_COMMON_INTERACTION}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_COMMON
    ${HEADER_SPIRIT_ENGINE_COMMON}
    ${CMAKE_CURRENT_SOURCE_DIR}/Functor_Dispatch.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Hamiltonian.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Interaction_Standalone_Adaptor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Interaction_Traits.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Interaction_Wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/StateType.hpp
    PARENT_SCOPE
)
