add_subdirectory(interaction)

set(SOURCE_SPIRIT_ENGINE_SPIN_INTERACTION
    ${SOURCE_SPIRIT_ENGINE_SPIN_INTERACTION}
    PARENT_SCOPE
)

set(HEADER_SPIRIT_ENGINE_SPIN
    ${HEADER_SPIRIT_ENGINE_SPIN}
    ${CMAKE_CURRENT_SOURCE_DIR}/Eigenmodes.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Hamiltonian.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/HTST.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Interaction_Standalone_Adaptor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_SIB.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_Heun.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_Depondt.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_RK4.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_VP.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_VP_OSO.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_LBFGS_OSO.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_LBFGS_Atlas.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method_Solver.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method_LLG.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method_GNEB.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method_MC.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method_MMF.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Method_EMA.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Solver_Kernels.hpp
    PARENT_SCOPE
)
